# plutus-starter

./: .gitignore  CONTRIBUTING.md  README.md  cabal.project  default.nix  flake.nix  hie.yaml  plutus-starter.cabal  release.nix  shell.nix  stack.yaml
.devcontainer/: devcontainer.json
.github/workflows/: haskell.yml  test.yml
budget/: Main.hs
examples/src/Plutus/Contracts/: Game.hs  GameStateMachine.hs  HelloWorldNumeric.hs
examples/test/: Spec.hs
examples/test/Spec/: Game.hs  game.pir
nix/: default.nix  sources.json
nix/lib/: ci.nix
nix/pkgs/: default.nix
nix/pkgs/haskell/: default.nix  extra.nix  haskell.nix  sha256map.nix
pab/: Main.hs
scripts/: test
scripts/wrap-cabal/: wrap-cabal.sh
src/: MyModule.hs
